--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -13,7 +13,6 @@ template:
 toolchain:
   name: 'cloud-functions-apis-toolchain'
 services:
-{{#hostedgit}}
   repo:
     service_id: hostedgit
     parameters:
@@ -22,26 +21,6 @@ services:
       type: clone
       has_issues: true
       enable_traceability: true
-{{/hostedgit}}
-{{#githubpublic}}
-  repo:   
-    service_id: githubpublic
-    parameters:
-      repo_name: 'cloud-functions-apis'
-      repo_url: 'https://github.com/tmcguckin/cloud-functions-apis'
-      type: clone
-      has_issues: true
-{{/githubpublic}}
-{{#github_integrated}}
-  repo:
-    service_id: github_integrated
-    parameters:
-      repo_name: '{{toolchain.name}}'
-      repo_url: 'https://cloud.ibm.github.com/open-toolchain/hello-containers'
-      type: clone
-      has_issues: true
-      enable_traceability: true
-{{/github_integrated}}
   build:
     service_id: pipeline
     parameters:
@@ -60,6 +39,7 @@ services:
           SPACE: '{{form.pipeline.parameters.space}}'
           ORG: '{{form.pipeline.parameters.organization}}'
           REGION: '{{form.pipeline.parameters.region}}'
+          GROUP: '{{form.pipeline.parameters.group}}'
         execute: true
 form:
   pipeline:
