--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -2,9 +2,6 @@ version: '2'
 template:
   name: "Cloud Functions REST APIs Toolchain"
   description: "Deploy Serverless REST APIs"
-  required:
-    - build
-    - repo
   info:
     git url: >-
       [https://github.com/IBM/ibm-cloud-functions-refarch-serverless-apis](https://github.com/IBM/ibm-cloud-functions-refarch-serverless-apis)
@@ -13,20 +10,10 @@ template:
 toolchain:
   name: 'cloud-functions-apis-toolchain'
 services:
-  repo:
-    service_id: hostedgit
-    parameters:
-      repo_name: 'java-app-{{timestamp}}'
-      repo_url: 'https://www.git.com/open-toolchain/java-spring-microservice'
-      type: clone
-      has_issues: true
-      enable_traceability: true
   build:
     service_id: pipeline
     parameters:
-      services:
-        - repo
-      name: '{{services.repo.parameters.repo_name}}'
+      name: 'foo'
       ui-pipeline: true
       configuration:
         content:
@@ -43,7 +30,5 @@ services:
         execute: true
 form:
   pipeline:
-    parameters:
-      username: 'admin'
     schema:
       $ref: deploy.json
