--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -13,33 +13,40 @@ template:
 toolchain:
   name: 'cloud-functions-apis-toolchain'
 services:
-  $source_providers:
-    - $source_provider: 'hostedgit'
-      repo:
-        service_id: hostedgit
-        parameters:
-          repo_name: 'java-app-{{timestamp}}'
-          repo_url: 'https://www.git.com/open-toolchain/java-spring-microservice'
-          type: clone
-          has_issues: true
-          enable_traceability: true
-    - $source_provider: 'githubpublic'
-      repo:   
-        service_id: githubpublic
-        parameters:
-          repo_name: 'cloud-functions-apis'
-          repo_url: 'https://github.com/tmcguckin/cloud-functions-apis'
-          type: clone
-          has_issues: true
-    - $source_provider: 'github_integrated'
-      repo:
-        service_id: github_integrated
-        parameters:
-          repo_name: '{{toolchain.name}}'
-          repo_url: 'https://cloud.ibm.github.com/open-toolchain/hello-containers'
-          type: clone
-          has_issues: true
-          enable_traceability: true
+  $switch:
+    $default: hostedgit
+    $parameter: repository
+    $value: 
+      - 
+        $case: hostedgit
+        repo: 
+          service_id: hostedgit
+          parameters: 
+            enable_traceability: true
+            has_issues: true
+            repo_name: "java-app-{{timestamp}}"
+            repo_url: "https://www.git.com/open-toolchain/java-spring-microservice"
+            type: clone
+      - 
+        $case: githubpublic
+        repo: 
+          service_id: githubpublic
+          parameters: 
+            enable_traceability: true
+            has_issues: true
+            repo_name: "java-app-{{timestamp}}"
+            repo_url: "https://www.git.com/open-toolchain/java-spring-microservice"
+            type: clone
+      - 
+        $case: githubintegrated
+        repo:
+          service_id: github_integrated
+          parameters:
+            repo_name: '{{toolchain.name}}'
+            repo_url: 'https://cloud.ibm.github.com/open-toolchain/hello-containers'
+            type: clone
+            has_issues: true
+            enable_traceability: true
   build:
     service_id: pipeline
     parameters:
