--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -14,50 +14,56 @@ toolchain:
   name: 'cloud-functions-apis-toolchain'
 services:
   frontend-repo:
-    $selection:
-      $parameter: 'source_provider'
-      $options:
+    $default: 'githubpublic'
+    $options:
       - $ifdef: 'hostedgit'
         service_id: hostedgit
         parameters:
-          repo_name: 'java-app-{{timestamp}}'
-          repo_url: 'https://www.git.com/open-toolchain/java-spring-microservice'
+          repo_name: 'frontend-repo-onhostedgit'
+          repo_url: 'https://www.git.com/otc/frontend-repo-onhostedgit'
           type: clone
           has_issues: true
           enable_traceability: true
       - $ifdef: 'githubpublic'
         service_id: githubpublic
         parameters:
-          repo_name: 'java-app-{{timestamp}}'
-          repo_url: 'https://www.git.com/open-toolchain/java-spring-microservice'
+          repo_name: 'frontend-repo-ongithubpublic'
+          repo_url: 'https://www.github.com/otc/frontend-repo-ongithubpublic'
           type: clone
           has_issues: true
           enable_traceability: true
+  middleware-repo:
+    service_id: hostedgit
+    parameters:
+      repo_name: 'middleware-repo-onhostedgit'
+      repo_url: 'https://www.git.com/otc/middleware-repo-onhostedgit'
+      type: clone
+      has_issues: true
+      enable_traceability: true
   backend-repo:
-    $selection:
-      $parameter: 'bsr_source_repo'
-      $default: 'bsr_on_githubpublic'
-      $options:
-      - $ifdef: 'bsr_on_hostedgit'
+    $parameter: 'backend_source_provider'
+    $default: 'githubpublic'
+    $options:
+      - $ifdef: 'hostedgit'
         service_id: hostedgit
         parameters:
-          repo_name: 'java-app-{{timestamp}}'
-          repo_url: 'https://www.git.com/open-toolchain/java-spring-microservice'
+          repo_name: 'backend-repo-onhostedgit'
+          repo_url: 'https://www.git.com/backend-repo'
           type: clone
           has_issues: true
           enable_traceability: true
-      - $ifdef: 'bsr_on_githubpublic'
+      - $ifdef: 'githubpublic'
         service_id: githubpublic
         parameters:
-          repo_name: 'cloud-functions-apis'
-          repo_url: 'https://github.com/tmcguckin/cloud-functions-apis'
+          repo_name: 'backend-repo-ongithubpublic'
+          repo_url: 'https://github.com/otc/backend-repo-ongithubpublic'
           type: clone
           has_issues: true
-      - $ifdef: 'bsr_on_github_integrated'
+      - $ifdef: 'github_integrated'
         service_id: github_integrated
         parameters:
-          repo_name: '{{toolchain.name}}'
-          repo_url: 'https://cloud.ibm.github.com/open-toolchain/hello-containers'
+          repo_name: 'backend-repo-ongithub_integrated'
+          repo_url: 'https://cloud.ibm.github.com/otc/backend-repo-ongithub_integrated'
           type: clone
           has_issues: true
           enable_traceability: true
