--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -30,6 +30,7 @@ services:
         parameters:
           repo_name: 'frontend-repo-ongithubpublic'
           repo_url: $parameter.app_url | staticstringvalue
+          foo: $parameter.app_url | {{some.mustache}}
           type: clone
           has_issues: true
           enable_traceability: true
