--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -17,9 +17,13 @@ services:
     $parameter: 'source_provider'
     $default: 'githubpublic'
     $options:
+      - elementAtStart: {}
       - $ifdef: 'hostedgit'
         service_id: hostedgit
         parameters:
+          foo:
+            - one: 1
+            - two: 2
           repo_name: 'frontend-repo-onhostedgit'
           repo_url: 'https://www.git.com/otc/frontend-repo-onhostedgit'
           type: clone
@@ -34,6 +38,7 @@ services:
           type: clone
           has_issues: true
           enable_traceability: true
+      - elementAtEnd: 'end'
   build:
     service_id: pipeline
     parameters:
