--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -30,7 +30,7 @@ services:
         service_id: githubpublic
         parameters:
           repo_name: 'frontend-repo-ongithubpublic'
-          repo_url: $parameter.repo_url
+          repo_url: $parameter.source_provider
           type: clone
           has_issues: true
           enable_traceability: true
