--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -20,9 +20,9 @@ services:
         service_id: hostedgit
         parameters:
           repo_name: 'frontend-repo-onhostedgit'
-          repo_url: 'https://www.git.com/otc/frontend-repo-onhostedgit'
+          repo_url: $parameter.source_provider
           repo_auth: $parameter.repo_auth | a7b9ddef66a
-          app_repo: $parameter.app_repo | {{form.pipeline.parameters.app_repo}}
+          app_repo: $parameter.app_repo | {{app.params.repo}}
           type: clone
           has_issues: true
           enable_traceability: true
