--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -22,6 +22,7 @@ services:
           repo_name: 'frontend-repo-onhostedgit'
           repo_url: $parameter.source_provider
           repo_auth: $parameter.repo_auth | a7b9ddef66a
+          repo_auth2: $parameter.repo_auth2|fooya
           app_repo: $parameter.app_repo | {{app.params.repo}}
           type: clone
           has_issues: true
