--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -14,6 +14,7 @@ toolchain:
   name: 'dynamic-source-providers-template-toolchain'
 services:
   frontend-repo:
+    $default: 'githubpublic'
     $options:
       - $ifdef: 'hostedgit'
         service_id: hostedgit
