--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -45,7 +45,7 @@ services:
         service_id: 'githubpublic'
         parameters:
           repo_name: 'frontend-repo-ongithubpublic'
-          repo_url: '$parameter.foo'
+          repo_url: $parameter.app_repo
           type: clone
           has_issues: true
           enable_traceability: true
