--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -26,7 +26,7 @@ services:
           app_repo4: $parameter.app_repo4|"{{app_repo}}"
           app_repo5: '{{app_repo}}'
           app_repo6: '{{repository}}'
-          auth1: $parameter.auth1 | a7b9ddef66a
+          auth1: '#parameter.auth1 | a7b9ddef66a'
           auth2: $parameter.auth2 | 'a7b9ddef66a'
           auth3: $parameter.auth3 | "jkeki7837"
           auth4: $parameter.auth4|"53hdyy777"
