--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -26,6 +26,7 @@ services:
           app_repo4: $parameter.app_repo4||"{{app_repo}}"
           app_repo5: '{{app_repo}}'
           app_repo6: '{{repository}}'
+          auth0: '#parameter.auth0 || 66666666366'
           auth1: '#parameter.auth1 || a7b9ddef66a'
           auth2: '#parameter.auth2'
           auth3: $parameter.auth3 || 'a7b9ddef66a'
