--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -28,10 +28,10 @@ services:
           auth0: '$parameter.auth0 || 66666666366'
           auth1: $parameter.auth1 || a7b9ddef66a
           auth2: $parameter.auth2
-          auth3: $parameter.auth3 || Timestamp: {{timestamp}}
-          auth4: $parameter.auth4 || 'a7b9ddef66a'
-          auth5: $parameter.auth5 || "jkeki7837"
-          auth6: $parameter.auth6||"53hdyy777"
+          auth3: $parameter.auth3 || 'a7b9ddef66a'
+          auth4: $parameter.auth4 || "jkeki7837"
+          auth5: $parameter.auth5||"53hdyy777"
+          time: $parameter.time || Timestamp is {{timestamp}}
           bar: '$parameter.bar || somebarstring'
           enable_traceability: true
           foo: $parameter.foo || somefoostring
