--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -53,11 +53,10 @@ services:
           test16: $parameter.test||'c6a8f7ac87c'
           test17: $parameter.test||"c6a8f7ac87c"
           
-          test18: $parameter.test||true
-          test19: $parameter.test||'true'
-          test20: $parameter.test||"true"
+          test18: $parameter.test || true
+          test19: $parameter.test || false
           
-          test21: $parameter.test || "{{form.pipeline.parameters.username}} says its currently {{timestamp}} ms"
+          test20: $parameter.test || "{{form.pipeline.parameters.username}} says its currently {{timestamp}} ms"
           
           enable_traceability: true
           has_issues: true
